--- a/ansible/vprofile.yml
+++ b/ansible/vprofile.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: tomcatservers
   become: yes
-
+  gather_facts: False
   tasks:
 
   - name: Install EPEL-release
@@ -16,22 +16,22 @@
 
 
   - name: Download latest VProfile.war file
-    get_url: url=http://<Nexus IP>:8081/nexus/content/repositories/VProfile-repo/<Group ID name>/{{time}}/{{build}}/{{gol_version}} dest=/tmp/ mode=755
+    get_url: url=http://{{nexusip}}:8081/nexus/content/repositories/VProfile-repo/{{groupid}}/{{time}}/{{build}}/{{vprofile_version}} dest=/tmp/ mode=755
 
   - name: Stop tomcat service
     service: name=tomcat state=stopped
 
   - name: Copy artifact to tomcat folder
-    shell: cp /tmp/{{gol_version}} /var/lib/tomcat/webapps
+    shell: cp /tmp/{{vprofile_version}} /var/lib/tomcat/webapps
 
-  - name: Delete link to existing gol version
+  - name: Delete link to existing vprofile version
     file: path=/var/lib/tomcat/webapps/VProfile state=absent
 
   - name: Start tomcat service
     service: name=tomcat state=started
   - wait_for: path=/var/lib/tomcat/webapps/{{time}}-{{build}}
 
-  - name: Link latest GOL version
+  - name: Link latest vprofile version
     file: src=/var/lib/tomcat/webapps/{{time}}-{{build}} dest=/var/lib/tomcat/webapps/VProfile state=link
 
   - name: Stop iptables
