--- a/Docker-db/Dockerfile
+++ b/Docker-db/Dockerfile
@@ -3,4 +3,4 @@ FROM mysql
 ENV MYSQL_ROOT_PASSWORD="vpropass"
 ENV MYSQL_DATABASE="accounts"
 
-ADD accountsdb.sql docker-entrypoint-initdb.d/accountsdb.sql
+ADD Docker-db/accountsdb.sql docker-entrypoint-initdb.d/accountsdb.sql
