--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
     	    <artifactId>hamcrest-all</artifactId>
     	    <version>1.3</version>
     	    <scope>test</scope>
+	</dependency>
         <dependency>
 	    <groupId>commons-fileupload</groupId>
 	    <artifactId>commons-fileupload</artifactId>
