--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
 	    <version>2.4</version>
         </dependency>
     </dependencies>
-    <build>
+     <build>
         <plugins>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
@@ -147,27 +147,28 @@
                     </webApp>
                 </configuration>
             </plugin>
-            <plugin>
- -		 <groupId>org.jacoco</groupId>
- -		 <artifactId>jacoco-maven-plugin</artifactId>
- -		 <version>0.7.2.201409121644</version>
- -		        <executions>
- -		            <execution>
- -		                <id>jacoco-initialize</id>
- -		                <phase>process-resources</phase>
- -		                <goals>
- -		                    <goal>prepare-agent</goal>
- -		                </goals>
- -		            </execution>
- -		            <execution>
- -		                <id>jacoco-site</id>
- -		                <phase>post-integration-test</phase>
- -		                <goals>
- -		                    <goal>report</goal>
- -		                </goals>
- -		            </execution>
- -		        </executions>
- -	     </plugin>
+		<!-- CODE COVERAGE -->
+		    <plugin>
+		        <groupId>org.jacoco</groupId>
+		        <artifactId>jacoco-maven-plugin</artifactId>
+		        <version>0.7.2.201409121644</version>
+		        <executions>
+		            <execution>
+		                <id>jacoco-initialize</id>
+		                <phase>process-resources</phase>
+		                <goals>
+		                    <goal>prepare-agent</goal>
+		                </goals>
+		            </execution>
+		            <execution>
+		                <id>jacoco-site</id>
+		                <phase>post-integration-test</phase>
+		                <goals>
+		                    <goal>report</goal>
+		                </goals>
+		            </execution>
+		        </executions>
+		</plugin>
         </plugins>
     </build>
 </project>
