elasticsearch basic Integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,13 @@ memcached.standBy.host=127.0.0.2
 memcached.standBy.port=11211
 
 #RabbitMq Configuration
-rabbitmq.address=127.0.0.1
+rabbitmq.address=18.220.62.126
 rabbitmq.port=5672
 rabbitmq.username=test
 rabbitmq.password=test
+
+#Elasticesearch Configuration
+elasticsearch.host =192.168.1.85
+elasticsearch.port =9300
+elasticsearch.cluster=vprofile
+elasticsearch.node=vprofilenode
