--- a/pom.xml
+++ b/pom.xml
@@ -117,34 +117,53 @@
     	    <artifactId>hamcrest-all</artifactId>
     	    <version>1.3</version>
     	    <scope>test</scope>
-	</dependency>
-        <dependency>
-	    <groupId>commons-fileupload</groupId>
-	    <artifactId>commons-fileupload</artifactId>
-	    <version>1.3.1</version>
-	</dependency>
-	 <!-- RabbitMQ Dependency -->
-	<dependency>
-	    <groupId>net.spy</groupId>
-	    <artifactId>spymemcached</artifactId>
-	    <version>2.12.3</version>
-	</dependency>				
-	<dependency>
-	    <groupId>commons-io</groupId>
-	    <artifactId>commons-io</artifactId>
-	    <version>2.4</version>
-    </dependency>
-    <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
-            <version>1.7.1.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>4.0.2</version>
-        </dependency>
+		</dependency>
+	        <dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		 <!-- Memcached Dependency -->
+		<dependency>
+		    <groupId>net.spy</groupId>
+		    <artifactId>spymemcached</artifactId>
+		    <version>2.12.3</version>
+		</dependency>				
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.4</version>
+	    </dependency>
+	    <!-- RabbitMQ Dependency -->
+	    <dependency>
+	            <groupId>org.springframework.amqp</groupId>
+	            <artifactId>spring-rabbit</artifactId>
+	            <version>1.7.1.RELEASE</version>
+	    </dependency>
+	
+	    <dependency>
+	            <groupId>com.rabbitmq</groupId>
+	            <artifactId>amqp-client</artifactId>
+	            <version>4.0.2</version>
+	   </dependency>
+	   <!-- Elasticsearch Dependency-->
+		<dependency>
+		    <groupId>org.elasticsearch</groupId>
+		    <artifactId>elasticsearch</artifactId>
+		    <version>5.6.4</version>
+		</dependency>
+		<!-- Transport Client-->
+		<dependency>
+		    <groupId>org.elasticsearch.client</groupId>
+		    <artifactId>transport</artifactId>
+		    <version>5.6.4</version>
+		</dependency>
+		<!--gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.2</version>
+		</dependency>
     </dependencies>
      <build>
         <plugins>
@@ -159,28 +178,7 @@
                     </webApp>
                 </configuration>
             </plugin>
-	<!-- CODE COVERAGE -->
-		    <plugin>
-		        <groupId>org.jacoco</groupId>
-		        <artifactId>jacoco-maven-plugin</artifactId>
-		        <version>0.7.2.201409121644</version>
-		        <executions>
-		            <execution>
-		                <id>jacoco-initialize</id>
-		                <phase>process-resources</phase>
-		                <goals>
-		                    <goal>prepare-agent</goal>
-		                </goals>
-		            </execution>
-		            <execution>
-		                <id>jacoco-site</id>
-		                <phase>post-integration-test</phase>
-		                <goals>
-		                    <goal>report</goal>
-		                </goals>
-		            </execution>
-		        </executions>
-		</plugin>		
+		
         </plugins>
     </build>
 </project>
