--- a/docker-files1/web/Dockerfile
+++ b/docker-files1/web/Dockerfile
@@ -3,4 +3,4 @@ LABEL "Project"="Vprofile"
 LABEL "Author"="Shukurat"
 
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY nginvproaff.conf /etc/nginx/conf.d/vproaff.conf
+COPY nginvproapp.conf /etc/nginx/conf.d/vproaff.conf
