--- a/Docker-files/db/Dockerfile
+++ b/Docker-files/db/Dockerfile
@@ -1,9 +1,8 @@
 FROM mysql:5.7.25
 LABEL "Project"="Vprofile"
-LABEL "Author"="Imran"
-
+LABEL "Author"="Kalyan"
 ENV MYSQL_ROOT_PASSWORD="vprodbpass"
 ENV MYSQL_DATABASE="accounts"
+ADD db_backup.sql /docker-entrypoint-initdb.d/db_backup.sql
 
 
-ADD db_backup.sql docker-entrypoint-initdb.d/db_backup.sql
