--- a/Docker-files/web/Dockerfile
+++ b/Docker-files/web/Dockerfile
@@ -1,6 +1,5 @@
 FROM nginx
 LABEL "Project"="Vprofile"
-LABEL "Author"="Imran"
-
+LABEL "Author"="Kalyan"
 RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY nginvproapp.conf /etc/nginx/conf.d/vproapp.conf
