--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   vprodb:
-    image : kalyandockernew/vprodb:V1
+    image : kalyandockernew/vprofiledb:V1
     ports:
       - "3306:3306"
     volumes:
