--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -3,7 +3,7 @@ LABEL "Project"="Vprofile"
 LABEL "Author"="Kalyan"
 RUN rm -rf /usr/local/tomcat/webapps/*
 COPY target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
-CMD ["cataline.sh","run"]
+CMD ["catalina.sh","run"]
 EXPOSE 8080
 WORKDIR /usr/local/tomcat
 VOLUME /usr/local/tomcat/webapps
