--- a/aws-files/sonar_buildspec.yml
+++ b/aws-files/sonar_buildspec.yml
@@ -5,7 +5,7 @@ env:
     HOST: /sonarcloud/url
     Organization: /sonarcloud/organisation
     Project: /sonarcloud/project
-    CODEARTIFACT_AUTH_TOKEN: /codeartifact/CODE_ARTIFACT_TOKEN
+    #CODEARTIFACT_AUTH_TOKEN: /codeartifact/CODE_ARTIFACT_TOKEN
 phases:
   install:
     runtime-versions:
