--- a/userdata/variables.conf
+++ b/userdata/variables.conf
@@ -10,3 +10,5 @@ NEXUSPORT=8081
 
 sonar ec2 token
 f87a26bed9380cf27f6e2f518e0286bd0142b746
+
+xoxb-3370535219587-3367658424901-k9gCB3ABNE4hh2hSL8nTdoWd
