--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,12 @@
 		            </execution>
 		        </executions>
 		</plugin>
-        </plugins>
+		<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.2.0</version>
+      	</plugin>
+    </plugins>
     </build>
 	<repositories>
     <repository>
