--- a/Docker-files/app/multistage/Dockerfile
+++ b/Docker-files/app/multistage/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8 AS BUILD_IMAGE
-RUN apt update && apt install maven -y
+RUN apt install maven -y
 RUN git clone -b vp-docker https://github.com/imranvisualpath/vprofile-repo.git
 RUN cd vprofile-repo && mvn install
 
