--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,34 +25,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
-    - name: remove default tomcat webapps files
-      uses: appleboy/ssh-action@master
+    - uses: actions/upload-artifact@v3
       with:
-         host: ${{ secrets.HOST }}
-         username: ${{ secrets.USERNAME }}
-         key: ${{ secrets.KEY }}
-         port: ${{ secrets.PORT }}
-         script: rm -rf /usr/local/tomcat8/webapps/*
-    
-    - name: copy artifact to tomcat
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        port: ${{ secrets.PORT }}
-        key: ${{ secrets.KEY }}
-        source: "target/vprofile-v2.war"
-        target: "/usr/local/tomcat8/webapps"
-        strip_components: 1
-        
-    - name: rename vprofile-v2.war
-      uses: appleboy/ssh-action@master
-      with:
-         host: ${{ secrets.HOST }}
-         username: ${{ secrets.USERNAME }}
-         key: ${{ secrets.KEY }}
-         port: ${{ secrets.PORT }}
-         script: mv /usr/local/tomcat8/webapps/vprofile-v2.war /usr/local/tomcat8/webapps/ROOT.war
-      
+      path: target/
       
       
