--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
-    - uses: actions/upload-artifact@v3
+    - uses: actions/download-artifact@v3
       with:
-        path: target/
+        path: /
       
       
