my changes for the deployment on DigitalOcean managed Kubernetes cluster

--- a/kubernetes/vpro-app/app-secret.yml
+++ b/kubernetes/vpro-app/app-secret.yml
@@ -6,3 +6,6 @@ type: Opaque
 data:
   db-pass: dnByb2RicGFzcw== 
   rmq-pass: Z3Vlc3Q=
+
+# secrets are encoded in base64 in commandline and then coppied here
+# All parameters, including secrets should be derived from the application.properties file
