--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,16 @@
     </dependencies>
      <build>
         <plugins>
+	    <plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.13</version>
+<configuration>
+<includes>
+<include>**/*Tests.java</include>
+</includes>
+</configuration>
+</plugin>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
