--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,18 @@
             </plugin>
 		<!-- CODE COVERAGE -->
  		    <plugin>
- 		        <groupId>org.jacoco</groupId>
+			    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <runOrder>alphabetical</runOrder>
+				    </configuration>
+			    </plugin>
+			    <groupId>org.jacoco</groupId>
  		        <artifactId>jacoco-maven-plugin</artifactId>
  		        <version>0.7.2.201409121644</version>
  		        <executions>
