--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -20,6 +20,9 @@ pipeline {
         NEXUS_LOGIN = 'NexusCredentials'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
+        registryCredential = 'ecr:us-east-1:awscreds'
+        appRegistry = '927563186154.dkr.ecr.us-east-1.amazonaws.com/vprofileappimg'
+        vprofileRegistry = "https://927563186154.dkr.ecr.us-east-1.amazonaws.com"
 
     }
     stages {
@@ -86,6 +89,23 @@ pipeline {
                   type: 'war']
         ]
      )
+            }
+        }
+        stage('Build App image'){
+            steps{
+                script{
+                    dockerImage = docker.build( appRegistry + "$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                }
+            }
+        }
+        stage('Upload App Image'){
+            steps{
+                script{
+                    docker.withRegistry( vprofileRegistry, registryCredential){
+                        dockerImage.push("$BUILD_NUMBER")
+                        dockerImage.push('latest')
+                    }
+                }
             }
         }
     }
