--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -94,7 +94,7 @@ pipeline {
         stage('Build App image'){
             steps{
                 script{
-                    dockerImage = docker.build( appRegistry + "$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                    dockerImage = docker.build( appRegistry + "./Docker-files/app/multistage/")
                 }
             }
         }
