--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -101,7 +101,7 @@ pipeline {
         stage('Upload App Image'){
             steps {
                 script {
-                    docker.withRegistry(vprofileRegistry, appRegistry, registryCredential) {
+                    docker.withRegistry("https://927563186154.dkr.ecr.us-east-1.amazonaws.com" + appRegistry, registryCredential) {
                         dockerImage.push("$BUILD_NUMBER")
                         dockerImage.push('latest')
                     }
