--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         NEXUS_LOGIN = 'NexusCredentials'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
-        registryCredential = 'awscreds'
+        registryCredential = 'ecr:us-east-1:awscreds'
         appRegistry = '927563186154.dkr.ecr.us-east-1.amazonaws.com/vprofileproj'
         vprofileRegistry = "https://927563186154.dkr.ecr.us-east-1.amazonaws.com"
 
@@ -101,7 +101,7 @@ pipeline {
         stage('Upload App Image'){
             steps {
                 script {
-                    docker.withRegistry("https://927563186154.dkr.ecr.us-east-1.amazonaws.com", "927563186154.dkr.ecr.us-east-1.amazonaws.com/vprofileproj", "ecr:us-east-1:awscreds") {
+                    docker.withRegistry(vprofileRegistry, registryCredential) {
                         dockerImage.push("$BUILD_NUMBER")
                         dockerImage.push('latest')
                     }
