--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -94,14 +94,14 @@ pipeline {
         stage('Build App image'){
             steps{
                 script{
-                    dockerImage = docker.build( appRegistry + "$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                    dockerImage = docker.build(appRegistry + ":$BUILD_NUMBER", "./Docker-files/app/multistage/")
                 }
             }
         }
         stage('Upload App Image'){
             steps {
                 script {
-                    docker.withRegistry(vprofileRegistry, appRegistry, registryCredential) {
+                    docker.withRegistry(vprofileRegistry, registryCredential) {
                         dockerImage.push("$BUILD_NUMBER")
                         dockerImage.push('latest')
                     }
