changes are made in Dockerfile

--- a/Docker-files/app/multistage/Dockerfile
+++ b/Docker-files/app/multistage/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8 AS BUILD_IMAGE
-RUN apt update && apt install maven -y && apt-get clean && apt-get install -f && dpkg --configure -a
+RUN apt update && apt install maven -y
 RUN git clone -b vp-docker https://github.com/afru123/vprofile-project1.git
 RUN cd vprofile-project1 && mvn install
 
