changes for ECS

--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -110,6 +110,13 @@ pipeline {
                 }
             }
         }
+        stage('Deploy to ECS Stagging') {
+            steps {
+                withAWS(credentials: 'awscreds', region: 'us-east-1') {
+                    sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
+                }
+            }
+        }
         
     }
     post {
