--- a/aws-files/sonar_buildspec.yml
+++ b/aws-files/sonar_buildspec.yml
@@ -29,6 +29,11 @@ phases:
       - echo "Installing JDK11 as its a dependency for sonarqube code analysis"
       - apt-get install -y openjdk-11-jdk
       - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+      - echo "Installing Node.js 14"
+      - curl -sL https://deb.nodesource.com/setup_14.x | bash -
+      - apt-get install -y nodejs
+      - n 14.21.2
+      - node -v
       - mvn sonar:sonar -Dsonar.login=$LOGIN -Dsonar.host.url=$HOST -Dsonar.projectKey=$Project -Dsonar.organization=$Organization -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ -Dsonar.junit.reportsPath=target/surefire-reports/ -Dsonar.jacoco.reportsPath=target/jacoco.exec -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
       - sleep 5
       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=$Project >result.json
