error in env variable

--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -108,7 +108,7 @@ pipeline {
         stage('Upload App Image') {
             steps{
                 script {
-                    docker.withRegistry( vprofileRegistry, registryCredential ) {
+                    docker.withRegistry( vprofileRegistry, registryCredentials ) {
                           dockerImage.push("$BUILD_NUMBER")
                           dockerImage.push('latest')         
                     }
