--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -20,6 +20,8 @@ pipeline {
         registryCredentials = 'ecr:us-east-1:awscred'
         appRegistry = '292744143809.dkr.ecr.us-east-1.amazonaws.com/vprofileappimg'
         vprofileRegistry = 'https://292744143809.dkr.ecr.us-east-1.amazonaws.com'
+        cluster = 'testcluster'
+        service = 'stageservice'
     }
 
     stages {
@@ -114,7 +116,15 @@ pipeline {
                     }
                 }
             }
-        }        
+        }
+
+        stage('Deploy to ECS staging') {
+            steps {
+                withAWS(credentials: 'awscreds', region: 'us-east-1') {
+                    sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
+                }
+            }
+        }                    
 
     } 
 
