re-deply with correct cred

--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -120,7 +120,7 @@ pipeline {
 
         stage('Deploy to ECS staging') {
             steps {
-                withAWS(credentials: 'awscreds', region: 'us-east-1') {
+                withAWS(credentials: 'awscred', region: 'us-east-1') {
                     sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
                 }
             }
