--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -1,103 +1,25 @@
+def COLOR_MAP = [
+    'SUCCESS': 'good',
+    'FAILURE': 'danger',
+]
+
 pipeline {
     agent any
-    tools {
-        maven "MAVEN3"
-        jdk "OracleJDK8"
-    }
-    
+
     environment {
-        SNAP_REPO = 'vprofile-snapshot'
-		NEXUS_USER = 'admin'
-		NEXUS_PASS = '$Chennai29'
-		RELEASE_REPO = 'vprofile-release'
-		CENTRAL_REPO = 'vpro-maven-central'
-		NEXUSIP = '172.31.23.7'
-		NEXUSPORT = '8081'
-		NEXUS_GRP_REPO = 'vpro-maven-group'
-        NEXUS_LOGIN = 'nexusid'
-        SONARSERVER = 'sonarserver'
-        SONARSCANNER = 'sonarscanner'
+        cluster = "prodcluster"
+        service = "prodservice"
     }
 
     stages {
-        stage('Build') {
-            steps {
-                sh 'mvn -s settings.xml -DskipTests install'
-            }
-            post {
-                success {
-                    echo "Now Archiving."
-                    archiveArtifacts artifacts: '**/*.war'
-                }
-            }
+        stage('Deploy to Prod ecs') {
+          steps {
+             withAWS(credentials: 'awscred', region: 'us-east-1') {
+                 sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
+             }
+          }
         }
-
-        stage('Test') {
-            steps {
-                sh 'mvn -s settings.xml test'
-            }
-        }
-
-        stage('Checkstyle Analysis') {
-            steps {
-                sh 'mvn -s settings.xml checkstyle:checkstyle' 
-            }
-        }
-        
-        stage('Sonar Analysis') {
-            environment {
-                scannerHome = tool "${SONARSCANNER}"
-            }
-            steps {
-               withSonarQubeEnv("${SONARSERVER}") {
-                   sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
-                   -Dsonar.projectName=vprofile \
-                   -Dsonar.projectVersion=1.0 \
-                   -Dsonar.sources=src/ \
-                   -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-                }
-
-            }
-
-        }
-
-        stage("Quality Gate") {
-            steps {
-                timeout(time: 1, unit: 'HOURS') {
-                    // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
-                    // true = set pipeline to UNSTABLE, false = don't
-                    waitForQualityGate abortPipeline: true
-                }
-            }
-        }
-
-        stage('upload artifact') {
-            steps {
-                nexusArtifactUploader(
-                    nexusVersion: 'nexus3',
-                    protocol: 'http',
-                    nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-                    groupId: "QA",
-                    version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-                    repository: "${RELEASE_REPO}",
-                    credentialsId: "${NEXUS_LOGIN}",
-                    artifacts: [
-                        [artifactId: 'vprofile-project',
-                         classifier: '',
-                         file: 'target/vprofile-v2.war',
-                         type: 'jar']
-                        ]
-                )
-            }
-        }
-
 
     }
-
+    
 }
-
-
-
