--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -1,13 +1,11 @@
 FROM openjdk:11 AS BUILD_IMAGE
-RUN apt update && apt install maven git -y
-RUN git clone https://github.com/devopshydclub/vprofile-project.git
-RUN cd vprofile-project && git checkout dockermysql8 && mvn install
+RUN apt update && apt install maven -y
+RUN git clone https://github.com/purnimasahoo/devops-project.git
+RUN cd devops-project && git checkout docker && mvn install
 
 FROM tomcat:9-jre11
-
-RUN rm -rf /usr/local/tomcat/webapps/*
-
-COPY --from=BUILD_IMAGE vprofile-project/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
+RUN rm -rf /usr/local/webapps/*
+COPY --from=BUILD_IMAGE devops-project/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
 
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
