--- a/Docker-files/web/Dockerfile
+++ b/Docker-files/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx
-LABEL "Project"="Vprofile"
-LABEL "Author"="Imran"
+LABEL "Project"="Devops"
+LABEL "Author"="Purnima"
 
 RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY nginvproapp.conf /etc/nginx/conf.d/vproapp.conf
