--- a/pom.xml
+++ b/pom.xml
@@ -179,19 +179,21 @@
                         <contextPath>/</contextPath>
                     </webApp>
                 </configuration>
-        <distributionManagement>
-            <repository>
-              <id>nexus</id>
-              <name>Womm Releases Nexus Repository</name>
-              <url>http://172.31.80.65:8081/repository/vpwoma-Release/</url>
-            </repository>
+        <!-- Your project information -->
+    
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Womm Releases Nexus Repository</name>
+            <url>http://172.31.80.65:8081/repository/vpwoma-Release/</url>
+        </repository>
 
-            <snapshotRepository>
-              <id>nexus</id>
-              <name>Woma Snapshot Nexus Repository </name>
-              <url>http://172.31.80.65:8081/repository/vpwoma-Snapshot/</url>
-            </snapshotRepository>		
-        </distributionManagement>		    
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>Woma Snapshot Nexus Repository</name>
+            <url>http://172.31.80.65:8081/repository/vpwoma-Snapshot/</url>
+        </snapshotRepository>		
+    </distributionManagement>	    
             </plugin>
 		<!-- CODE COVERAGE -->
 	            <plugin>
