--- a/pom.xml
+++ b/pom.xml
@@ -211,4 +211,16 @@
 		
         </plugins>
     </build>
+ <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Womm Releases Nexus Repository</name>
+            <url>http://172.31.80.65:8081/repository/vpwoma-Release/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>Woma Snapshot Nexus Repository</name>
+            <url>http://172.31.80.65:8081/repository/vpwoma-Snapshot/</url>
+        </snapshotRepository>
+    </distributionManagement>	
 </project>
