--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,43 @@
 version: '3.8'
 services:
   vprodb:
-    build: 
+    build:
       context: ./Docker-files/db
-    image: vprocontainers/vprofiledb
+    image: damjay/vprofiledb
     container_name: vprodb
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
       - vprodbdata:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD=vprodbpass
+    environment: 
+      - MYSQL_ROOT_PASSWORD=vprodbpass
   vprocache01:
     image: memcached
     ports:
-      - "11211:11211"
-  
+      - '11211:11211'
   vpromq01:
     image: rabbitmq
     ports:
-      - "15672:15672"
-    environment:
-      - RABBITMQ_DEFAULT_USER=guest
+      - '15672:15672'
+    environment: 
+      - RABBITMQ_DEFAULT_USER=guest 
       - RABBITMQ_DEFAULT_PASS=guest
-  redis:
-    image: "redis:alpine"
-
-
   vproapp:
-    build: 
+    build:
       context: ./Docker-files/app
-    image: vprocontainers/vprofileapp
+    image: damjay/vprofileapp
     container_name: vproapp
     ports:
-      - "8080:8080"
+      - '8080:8080'
     volumes:
       - vproappdata:/usr/local/tomcat/webapps
-
   vproweb:
-    build: 
+    build:
       context: ./Docker-files/web
-    image: vprocontainers/vprofileweb
+    image: damjay/vprofileweb
     container_name: vproweb
     ports:
-      - "80:80"
-
+      - '80:80'
 volumes:
-      - vproappdata: {}
-      - vproappdata: {}
-   
+   vprodbdata: {}
+   vproappdata: {}
