--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -6,7 +6,7 @@ RUN cd vprofile-project && git checkout docker && mvn install
 FROM tomcat:9-jre11
 LABEL "project"="Vprofile"
 LABEL "Author"="Bhavana"
-RUN r -rf /usr/local/tomcat/webapps/*
+RUN rm -rf /usr/local/tomcat/webapps/*
 COPY --from=BUILD_IMAGE vprofile-project/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
 
 EXPOSE 8080
