--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <logback.version>1.1.3</logback.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-	   <sonar.host.url>http://localhost:9000/</sonar.host.url>
-        <sonar.login>bd3b7aa788d6fe53b186d9f21df93490d77964c4</sonar.login>
+	   <sonar.host.url>http://172.31.30.127:9000/</sonar.host.url>
+        <sonar.login>e7282cc66604b075759870ce23caa8d1ea48c56f</sonar.login>
 
     </properties>
 
