--- a/pom.xml
+++ b/pom.xml
@@ -216,12 +216,12 @@
         <repository>
             <id>nexus</id>
             <name>Woma Releases Nexus Repository</name>
-            <url>http://localhost:8081/repository/OMA-Release/</url>
+            <url>http://172.31.23.103:8081/repository/walmart-Release/</url>
         </repository>
         <snapshotRepository>
             <id>nexus</id>
             <name>Woma Snapshot Nexus Repository</name>
-            <url>http://localhost:8081/repository/OMA-Snapshot/</url>
+            <url>http://172.31.23.103:8081/repository/walmart-Snapshot/</url>
         </snapshotRepository>
     </distributionManagement>	
 </project>
