--- a/stagepipeline/Jenkinsfile
+++ b/stagepipeline/Jenkinsfile
@@ -58,7 +58,7 @@ pipeline {
     }
     steps {
         withSonarQubeEnv("${SONARSERVER}") {
-            sh """${scannerHome}/bin/sonar-scanner \
+            sh '''${scannerHome}/bin/sonar-scanner \
                 -Dsonar.projectKey=vprofile \
                 -Dsonar.host.url=http://54.237.90.84 \
                 -Dsonar.login=c988e73dfd32924deb928adf419817c40f2333b4 \
@@ -68,7 +68,7 @@ pipeline {
                 -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
                 -Dsonar.junit.reportsPath=target/surefire-reports/ \
                 -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml"""
+                -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
         }
     }
 }
