--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
       java: corretto8
     commands:
     - cp ./settings.xml /root/.m2/settings.xml
+    - export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain vprofile --domain-owner 871514557873 --region us-east-1 --query authorizationToken --output text`
   pre_build:
     commands:
       - apt-get update
