--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:11 AS BUILD_IMAGE
 LABEL "project"="vprofile"
 RUN apt update && apt install maven -y
 RUN git clone https://github.com/deepsoftdp/vprofile-project.git
-RUN cd vprofile-project && git checkout docker && mvn install
+RUN cd vprofile-project && git checkout containers && mvn install
 
 
 FROM tomcat:9-jre11 
