--- a/Docker-files/db/Dockerfile
+++ b/Docker-files/db/Dockerfile
@@ -5,3 +5,5 @@ ENV MYSQL_ROOT_PASSWORD="password"
 ENV MYSQL_DATABASE="accounts"
 
 ADD db_backup.sql docker-entrypoint-initdb.d/db_backup.sql
+
+EXPOSE 3306
